# iced_font_awesome

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
assets/font-awesome/: icons-light.json
assets/font-awesome-7/: icons-light.json
examples/: explorer.rs
src/: lib.rs
src/fonts/: v6.rs  v7.rs
