[package]
name = "iced_font_awesome"
description = "Font Awesome component for Iced"
homepage = "https://github.com/danielmbomfim/iced_font_awesome"
repository = "https://github.com/danielmbomfim/iced_font_awesome"
keywords = ["gui", "iced", "icons"]
categories = ["gui"]
readme = "README.md"
authors = ["Daniel M. Bomfim"]
version = "0.2.1"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
getrandom = { version = "0.3" }
iced = { git = "https://github.com/iced-rs/iced.git", features = ["advanced"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
